<resources>
    <string name="app_name"></string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_place">Add/Edit Item</string>
    <string name="txt_place_added">Item added</string>
    <string name="txt_add_cancel">Item adding cancelled</string>
    <string name="action_cancel">Cancel</string>
    <string name="txt_place_edited">Item edited!</string>
    <string name="txt_about">This is a custom shopping list created for AIT by Jason Wangsadinata</string>
    <string name="txt_help">Use the touch controls to work with the application.</string>
    <string name="action_hide">Hide</string>
    <string name="item_add_item">Add Item</string>
    <string name="item_about">About</string>
    <string name="item_help">Help</string>
    <string name="item_total_cost">Total Cost</string>
    <string name="row_item_bought_checkbox">Bought</string>
    <string name="row_item_description">Description</string>
    <string name="row_item_edit">Edit</string>
    <string name="row_item_delete">Delete</string>
    <string name="createitem_itemtype">Item type:</string>
    <string name="createitem_itemname">Item name</string>
    <string name="createitem_description">Description</string>
    <string name="createitem_price">Price</string>
    <string name="createitem_save">Save</string>
    <string name="totalcost_for_snackbar">"The total cost is: "</string>
    <string name="message_if_bought">Item bought</string>
    <string name="message_if_not_bought">Item not bought</string>
</resources>
