<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/item_add_item"
        android:orderInCategory="100"
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"/>
    <item
        android:title="@string/item_about"
        android:orderInCategory="101"
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"/>
    <item
        android:title="@string/item_help"
        android:orderInCategory="102"
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"/>
    <item
        android:title="@string/item_total_cost"
        android:orderInCategory="103"
        android:id="@+id/action_totalcost"
        android:icon="@android:drawable/ic_menu_manage"/>

</menu>