<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#6c7172"
    android:paddingBottom="16dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="16dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/createitem_itemtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etItemName"
        android:hint="@string/createitem_itemname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etItemDesc"
        android:hint="@string/createitem_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etItemPrice"
        android:hint="@string/createitem_price"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:text="@string/createitem_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
